--- a/src/views/searchPopup.ejs
+++ b/src/views/searchPopup.ejs
@@ -7,22 +7,44 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         />
-        <link
-            rel="stylesheet"
-            href="/static/styles/pages/category/searchPopup.css"
-        />
+        <link rel="stylesheet" href="/static/styles/pages/searchPopup.css" />
         <link rel="stylesheet" href="/static/styles/reset.css" />
         <link rel="stylesheet" href="/static/styles/init.css" />
         <title>검색</title>
     </head>
     <body>
-        <div class="search-popup">
-            <i class="fa-solid fa-x"></i>
-            <input
-                type="text"
-                class="search-input"
-                placeholder="검색어를 입력해주세요."
-            />
-        </div>
+        <section class="search-popup">
+            <a href="" class="search-popup-close">
+                <i class="fa-solid fa-x"></i>
+            </a>
+            <div class="search-input-header">
+                <input
+                    type="text"
+                    class="search-input"
+                    placeholder="검색어를 입력해주세요."
+                />
+                <a href="">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </a>
+            </div>
+            <div class="search-input-main">
+                <div class="search-history">
+                    검색기록
+                    <a href="" class="search-history-list">운동</a>
+                    <a href="" class="search-history-list">@ggaong</a>
+                    <a href="" class="search-history-list">peppone-choi</a>
+                </div>
+                <div class="autocomplete-suggestions">
+                    추천검색
+                    <div class="search-suggestion-container">
+                        <a href="" class="search-suggestion-list">#unityhub</a>
+                        <a href="" class="search-suggestion-list">#unityhub</a>
+                        <a href="" class="search-suggestion-list">#unityhub</a>
+                        <a href="" class="search-suggestion-list">#unityhub</a>
+                        <a href="" class="search-suggestion-list">#unityhub</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
