[황다영] 좋아요 클릭 이벤트추가

--- a/public/styles/init.css
+++ b/public/styles/init.css
@@ -148,6 +148,8 @@ select {
     outline: none;
 }
 
+
+
 /* flex */
 .flex-column-center {
     display: flex;
@@ -169,3 +171,8 @@ select {
 a {
     text-decoration: none;
 }
+
+button {
+    cursor: pointer;
+}
+
