--- a/public/styles/pages/posts/postDetail.css
+++ b/public/styles/pages/posts/postDetail.css
@@ -6,6 +6,11 @@ a {
   color: var(--mono-500);
 }
 
+
+/* .inner {
+  max-width: 900px;
+} */
+
 .post {
   background-color: var(--mono-000);
   padding: 15px;
@@ -106,11 +111,20 @@ a {
   justify-content: flex-start;
   gap: 15px;
   padding-bottom: 15px;
+  cursor: pointer;
+  
 }
 
-.postButtons  a {
+.postButtons i {
   text-decoration: none;
   color: var(--primary);
+}
+
+.postButtons .like {
+  flex-direction: row;
+  font-size: var(--text-default);
+  align-items: center;
+  gap: 3px;
 }
 
 
@@ -225,6 +239,7 @@ a {
 
 .like i {
   font-size: var(--text-default);
+  cursor: pointer;
 }
 
 /* 댓글 수정 삭제 대댓글 버튼 */
@@ -321,14 +336,67 @@ a {
 
 /* 태블릿 */
 @media (min-width: 768px) { 
+  .post {
+    padding: 20px;
+  }
+  .postTopUser {
+    gap: 10px;
+  }
+
   .userInfo {
     position: relative;
   }
 
-  .userId {
+  .userInfo .userId {
     position: absolute;
     bottom: -75%;
   }
+
+  .commentUser {
+    width: calc(100% - 100px);
+
+  }
+
+  .nickName {
+    font-size: var(--text-default);
+  }
+
+
+
+  .commentWriteWrap, .commentSingle {
+    justify-content: flex-start;
+    gap: 10px;
+  }
+
+
+
+  .commentArea p, .commentWrite {
+    width: 85%;
+  }
+
+  .commentArea .profileImg {
+    max-width: 40px;
+  }
+  .commentArea .profileImg {
+    width: 40px;
+    height: 40px;
+  }
+
+  .floatingMenu {
+    bottom: 10%;
+    right: 10%;
+  }
+
+  .floatingMenu span {
+    font-size: 20px;
+  }
+
+  .floatingMenu a {
+    width: 70px;
+    height: 70px;
+    font-size: 30px;
+  }
+
 } 
 
 /* PC */
