--- a/src/views/client/users/userEdit.ejs
+++ b/src/views/client/users/userEdit.ejs
@@ -21,7 +21,7 @@
           <img
             src="/static/images/profile.webp"
             alt="profile image"
-            class="profile-thumbnail"
+            id="profile-thumbnail"
           />
           <a href="" class="profile-edit-button">
             <img
@@ -36,13 +36,20 @@
               id="profile-image"
               name="profile-image"
               style="display: none"
+              accept="image/*"
             />
           </a>
-          <!-- <button class="edit-button" id="editbutton">
-            <i class="fa-solid fa-pencil">
-              <input type="file" id="filename" name="filename" hidden />
-            </i>
-          </button> -->
+          <!-- 용량 초과시 알림 팝업 -->
+          <div id="alertPopup" class="popup hidden">
+            <div class="alerttext">
+              <span>용량은 50MB를</span>
+              <span>초과할 수 없습니다.</span>
+            </div>
+            <div class="close-Button">
+              <button id="closePopupButton">확인</button>
+            </div>
+          </div>
+          <!-- 용량 초과시 알림 팝업 -->
           <p>50MB 제한</p>
         </div>
         <form id="profiletextform" class="profile-textform">
@@ -69,6 +76,29 @@
         .addEventListener("click", function () {
           document.getElementById("profile-image").click();
         });
+
+      // // 파일 입력 요소와 팝업 요소 가져오기
+      // const profileImage = document.getElementById("profile-image");
+      // const alertPopup = document.getElementById("alertPopup");
+      // const closePopupButton = document.getElementById("closePopupButton");
+
+      // // 50MB = 50 * 1024 * 1024 bytes
+      // const MAX_FILE_SIZE = 3 * 1024 * 1024;
+
+      // // 파일 첨부 시 파일 크기 확인
+      // profileImage.addEventListener("change", function (event) {
+      //   const file = event.target.files[0]; // 첨부된 파일 가져오기
+
+      //   if (file && file.size > MAX_FILE_SIZE) {
+      //     // 파일 크기가 50MB를 초과하면 팝업 표시
+      //     alertPopup.classList.remove("hidden");
+      //   }
+      // });
+
+      // // 팝업 닫기 버튼 클릭 시 팝업 숨기기
+      // closePopupButton.addEventListener("click", function () {
+      //   alertPopup.classList.add("hidden");
+      // });
     </script>
   </body>
 </html>
