[황다영] 스크립트, 마크업 부분 수정

--- a/public/styles/pages/posts/postList.css
+++ b/public/styles/pages/posts/postList.css
@@ -1,2 +1,3 @@
-@import "_reset";
-@import "style";
+@charset "utf-8";
+@import "../../common.css";
+@import "../../../styles/pages/posts/postDetail.css";
