카테고리 ejs 수정중

--- a/src/views/admin/category/categoryDetail.ejs
+++ b/src/views/admin/category/categoryDetail.ejs
@@ -6,6 +6,6 @@
         <title>Document</title>
     </head>
     <body>
-        관리자 카테고리 상세 화면 (게시판 불러오기)
+        <%- include('../posts/postList.ejs') %>
     </body>
 </html>
