--- a/src/views/client/category/userCategoryDetail.ejs
+++ b/src/views/client/category/userCategoryDetail.ejs
@@ -6,6 +6,6 @@
         <title>Document</title>
     </head>
     <body>
-        카테고리 상세 화면 [게시글 목록]
+        <%- include('/client/posts/posstLit.ejs') %>
     </body>
 </html>
