--- a/src/views/client/category/userCategoryList.ejs
+++ b/src/views/client/category/userCategoryList.ejs
@@ -21,7 +21,7 @@
                 <a href="javascript:void(0)" onclick="closeMenu()"
                     ><i class="fa-solid fa-x"></i
                 ></a>
-                <a href="">
+                <a href="/users/:userId/edit">
                     <i class="fa-solid fa-gear"></i>
                 </a>
                 <div class="category-profile">
@@ -47,7 +47,7 @@
                     <% }) %>
                 </div>
                 <div class="logout">
-                    <a href="#" id="logout-btn">
+                    <a href="/view/login" id="logout-btn">
                         <p>로그아웃</p>
                         <i class="fa-solid fa-right-from-bracket"></i>
                     </a>
