--- a/public/styles/pages/posts/postDetail.css
+++ b/public/styles/pages/posts/postDetail.css
@@ -27,7 +27,7 @@ a {
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap;
-  gap: 5px;
+  justify-content: space-between;
 
 }
 /* 프로필 이미지*/
@@ -72,11 +72,54 @@ a {
   border-radius: 30px;
   outline: 1px solid var(--primary);
   padding: 2px 7px;
-  position: absolute;
+ 
   font-size: var(--text-description);
+  /* position: absolute;
   right: 0;
-  top: 0;
+  top: 0; */
 }
+
+
+/*게시글 수정, 삭제 버튼 (더 보기) */
+.viewMore {
+  position: relative;
+  cursor: pointer;
+
+}
+.postEditDelete {
+  display: none;
+  position: absolute;
+  top: 30px;
+  right: 0;
+  /* transition: all .3s; */
+}
+
+.postEditDelete a {
+  text-align: center;
+  font-weight: 500;
+  color: var(--mono-000);
+  padding: 7px 10px;
+  width: 70px;
+  box-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+}
+
+.postEditDelete a:first-child {
+  border-radius: 10px 10px 0 0;
+  background-color: var(--sub-color-4);
+}
+
+.postEditDelete a:last-child {
+  border-radius: 0 0 10px 10px;
+  background-color: var(--sub-color-5);
+}
+
+.postEditDelete a:first-child:hover {
+  background-color: #75aeee;
+}
+.postEditDelete a:last-child:hover {
+  background-color: #f87c7c;
+}
+
 
 /* ----------글 제목/ 내용 부분-------------- */
 
@@ -340,6 +383,7 @@ a {
     padding: 20px;
   }
   .postTopUser {
+    justify-content: flex-start;
     gap: 10px;
   }
 
@@ -350,6 +394,10 @@ a {
   .userInfo .userId {
     position: absolute;
     bottom: -75%;
+  }
+
+  .category {
+    margin-left: auto;
   }
 
   .commentUser {
